--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "author": "Diego Muracciole <diegomuracciole@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node_modules/.bin/babel-node ./index.js"
+    "start": "node ./dist/bundle.js",
+    "build": "./node_modules/.bin/webpack"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "webpack": "^3.6.0"
   }
 }
