--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Diego Muracciole <diegomuracciole@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node ./dist/bundle.js",
+    "start": "./node_modules/.bin/webpack-dev-server",
     "build": "./node_modules/.bin/webpack"
   },
   "devDependencies": {
@@ -14,6 +14,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "webpack": "^3.6.0"
+    "html-webpack-plugin": "^2.30.1",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
   }
 }
