--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "dotenv": "^4.0.0",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.6.0",
