--- a/package.json
+++ b/package.json
@@ -14,13 +14,22 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "basscss-background-colors": "^2.1.0",
+    "basscss-colors": "^2.2.0",
+    "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
+    "postcss": "^6.0.13",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
+    "style-loader": "^0.19.0",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
+    "basscss": "^8.0.3",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
