--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "license": "MIT",
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server",
-    "build": "./node_modules/.bin/webpack"
+    "build": "./node_modules/.bin/webpack",
+    "lint": "node_modules/.bin/eslint src/"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -18,6 +20,11 @@
     "basscss-colors": "^2.2.0",
     "css-loader": "^0.28.7",
     "dotenv": "^4.0.0",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "postcss": "^6.0.13",
