--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server",
     "build": "./node_modules/.bin/webpack",
+    "test": "./node_modules/.bin/jest",
     "lint": "node_modules/.bin/eslint src/",
     "precommit": "lint-staged"
   },
@@ -32,11 +33,13 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jest": "^21.12.1",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
+    "jest": "^22.3.0",
     "lint-staged": "^4.3.0",
     "postcss": "^6.0.13",
     "postcss-cssnext": "^3.0.2",
