--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,8 @@
   "rules": {
     "arrow-parens": 0,
     "object-curly-newline": 0,
+    "function-paren-newline": 0,
+    "import/no-extraneous-dependencies": 0,
     "react/jsx-filename-extension": 0,
     "react/forbid-prop-types": 0,
     "react/require-default-props": 0,
