--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "prettier": "^1.7.4",
+    "react-test-renderer": "^16.2.0",
     "style-loader": "^0.19.0",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
