--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
   "dependencies": {
     "basscss": "^8.0.3",
     "classnames": "^2.2.5",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
