--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
+    "animate.css": "^3.6.1",
     "basscss": "^8.0.3",
     "classnames": "^2.2.5",
     "enzyme": "^3.3.0",
