--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "1.x",
+    "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-localstorage": "^0.4.1",
     "redux-logger": "^3.0.6",
