--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Diego Muracciole <diegomuracciole@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server --config ./config/webpack.dev.config.js",
+    "start": "node ./src/server.js",
+    "dev": "./node_modules/.bin/webpack-dev-server --config ./config/webpack.dev.config.js",
     "build": "./node_modules/.bin/webpack -p --config ./config/webpack.prod.config.js",
     "prebuild": "rimraf ./dist",
     "test": "./node_modules/.bin/jest",
@@ -59,6 +60,7 @@
     "classnames": "^2.2.5",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "express": "^4.16.3",
     "lodash": "^4.17.5",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
